<resources>
    <string name="app_name">Sisu</string>
    <string-array name="timeline_array">
        <item>Today</item>
        <item>This Month</item>
        <item>This Quarter</item>
        <item>This Year</item>
    </string-array>

    <!--Navbar-->
    <string name="navbarTitle">Current Team</string>
    <string name="teamAgentsTitle">Team Agents</string>

    <!--Version-->
    <string name="version">Version 1.1</string>

    <!--Labels-->
    <string name="archived_reason">Archived Reason:</string>
    <string name="annual_title">Annual Goals</string>
    <string name="appointments">Appointments</string>
    <string name="first_time_appts">1st Time Appts</string>
    <string name="contacts">Contacts</string>
    <string name="buyers_signed">Buyers Signed</string>
    <string name="bb_signed">Buyers Signed</string>
    <string name="listings_taken">Listings Taken</string>
    <string name="uc">U / C</string>
    <string name="under_contract">Under Contract</string>
    <string name="pending_volume">Pending Volume</string>
    <string name="activity_title">Activities</string>
    <string name="closed">Closed</string>
    <string name="closed_volume">Closed Volume</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="team">Team</string>
    <string name="appts">Appts.</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="reports">Reports</string>
    <string name="overall_leaderboard">Overall Leaderboard</string>
    <string name="teams">Teams</string>
    <string name="clients">Clients</string>
    <string name="my_profile">My Profile</string>
    <string name="setup">Setup</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="record">Record</string>
    <string name="new_client">New Client</string>
    <string name="add_client">Add Client</string>
    <string name="goals">Goals</string>
    <string name="signedDateTitle">Signed Date:</string>
    <string name="appointmentDateTitle">Initial Appointment Date:</string>
    <string name="appointmentSetDateTitle">1st Time Appt Set Date:</string>
    <string name="addAppointmentDateTitle">Add Appointment:</string>
    <string name="otherAppointmentDateTitle">Other Appointments</string>
    <string name="underContractTitle">Under Contract Date:</string>
    <string name="settlementDateTitle">Settlement Date:</string>
    <string name="pipeline">Pipeline</string>
    <string name="signed">Signed</string>
    <string name="contract">Contract</string>
    <string name="archived">Archived</string>
    <string name="total">Total: $</string>
    <string name="status">Status</string>
    <string name="legal">\u00A9 2018 sisu.co All rights reserved</string>
    <!--Settings page labels-->
    <string name="pushNotification">Push Notifications</string>
    <string name="dailyReminder">Daily Reminder</string>
    <string name="reminderTime">Reminder Time:</string>
    <string name="timezone">Time Zone:</string>
    <string name="lights">Lighter Theme</string>
    <string name="touchId">Touch/Face Id</string>
    <string name="monthlyTitle">Monthly Goals</string>
    <string name="yearlyTitle">Yearly Goals</string>

    <!--Buttons/Links-->
    <string name="activate">Activate</string>
    <string name="calculate">Calculate</string>
    <string name="archive">Archive</string>
    <string name="notes">Notes</string>
    <string name="forgot_password_sike">Already know your password?</string>
    <string name="create_account_sike">Already have an account?</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="need_account">Need an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="import_contact">Import</string>
    <string name="export_contact">Export</string>
    <string name="buyer">Buyer</string>
    <string name="seller">Seller</string>
    <string name="submit">Submit</string>
    <string name="add_note">Add Note</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>


    <!--Hints-->
    <string name="percent">%</string>
    <string name="unit_goal_hint">Unit Goal</string>
    <string name="mtdRecruit_goal_hint">MTD Net Recruits</string>
    <string name="volume_goal_hint">Volume Goal</string>
    <string name="password_hint">Password*</string>
    <string name="password_hint_non_req">Password</string>
    <string name="email_hint">Email Address</string>
    <string name="username_email_hint">Username/Email</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone</string>
    <string name="lead_source_hint">Lead Source:</string>
    <string name="phone_hint_non_req">Phone</string>
    <string name="transaction_amount_hint">Transaction Amount:</string>
    <string name="commission_hint">Paid Income:</string>
    <string name="logs">Logs</string>
    <string name="gci_hint">GCI</string>
    <string name="first_name_hint">First Name*</string>
    <string name="first_name_hint_non_req">First Name</string>
    <string name="last_name_hint">Last Name*</string>
    <string name="last_name_hint_non_req">Last Name</string>
    <string name="contacts_hint">Contacts</string>
    <string name="signed_buyers_hint">Buyers Signed</string>
    <string name="buyer_appt_hint">Buyer Appointments</string>
    <string name="seller_appt_hint">Listing Appointments</string>
    <string name="signed_sellers_hint">Listings Signed</string>
    <string name="buyers_under_contract_hint">Buyers Under Contract</string>
    <string name="sellers_under_contract_hint">Listings Under Contract</string>
    <string name="buyers_closed_hint">Buyers Closed</string>
    <string name="sellers_closed_hint">Listings Closed</string>
    <string name="closed_volume_hint">Closed Volume</string>
    <string name="under_contract_volume_hint">Under Contract Volume</string>
    <string name="signed_listings_hint">Signed Listings</string>
    <string name="under_contract_hint">Under Contract</string>
    <string name="closed_hint">Closed</string>
    <string name="desired_income_hint">Desired Income</string>
    <string name="goals_reason_hint">Your reason for tracking goals</string>
    <string name="old_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_password_hint">Confirm New Password</string>

    <!--Helper Text-->
    <string name="error_message">We had a problem contacting our servers.  Please try again later</string>
    <string name="teams_help_text">Configure team settings, invites, challenges</string>
    <string name="clients_help_text">Modify your pipeline</string>
    <string name="my_profile_help_text">Setup</string>
    <string name="setup_help_text">Set goals, edit activities, record settings</string>
    <string name="settings_help_text">Application settings</string>
    <string name="feedback_help_text">Provide feedback</string>
    <string name="forgot_password_help_text">Enter your Sisu email address below to receive a password reset email</string>
    <string name="change_password_help_text">Please enter your old password and the password you\'d like to change to</string>
    <string name="feedback_help_text_top">We are always looking for ways to improve!</string>
    <string name="feedback_help_text_bottom">Let us know how by leaving feedback below!</string>
    <string name="percent_help_text">Transaction and Percentage Required</string>

    <!--temp strings-->
    <string name="record_date">March 23, 2018</string>
    <string name="temp_date">Tap To Select</string>
    <string name="contacts_current_num"></string>
    <string name="contacts_goal_num"></string>
    <string name="bb_signed_current_num"></string>
    <string name="bb_signed_goal_num"></string>
    <string name="under_contract_current_num"></string>
    <string name="under_contract_goal_num"></string>
    <string name="appointments_current_num"></string>
    <string name="appointments_goal_num"></string>
    <string name="listings_taken_current_num"></string>
    <string name="listings_taken_goal_num"></string>
    <string name="closed_current_num"></string>
    <string name="closed_goal_num"></string>
    <string name="under_contract_amount">$56,085</string>
    <string name="closed_amount">$91,862</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="temp_timezone">America/Denver</string>

</resources>
