<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.ParentActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pipelineButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/pipeline"
            android:textSize="@dimen/font_smaller"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/signedButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/signed"
            android:textSize="@dimen/font_smaller"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/contractButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/contract"
            android:textSize="@dimen/font_smaller"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/closedButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/closed"
            android:textSize="@dimen/font_smaller"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/archivedButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/archived"
            android:textSize="@dimen/font_smaller"
            style="@style/ButtonStyle"/>
    </RadioGroup>

</RelativeLayout>