<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <TableRow>


        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="@dimen/font_large"/>

        <TextView
            android:id="@+id/actionBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/add_client"
            android:textSize="@dimen/font_large" />

        <TextView
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="@dimen/font_large"/>

    </TableRow>

</TableLayout>