<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.sisu.mobile.fragments.ClientsFragment">

        <SearchView
            android:id="@+id/searchClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@id/tabHost">

        </SearchView>

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/searchClient">

                <ListView
                    android:id="@+id/clientListView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp" />

        </FrameLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabHost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabMode="scrollable"
            app:tabTextAppearance="@style/MyTabTextAppearance">

                <android.support.design.widget.TabItem
                    android:id="@+id/tabPipeline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pipeline" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabSigned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signed" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabContract"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contract" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabClosed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/closed" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabArchived"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/archived" />
        </android.support.design.widget.TabLayout>

        <ProgressBar
            android:id="@+id/clientLoader"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>