<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    tools:context="co.sisu.mobile.fragments.SettingsFragment">


    <ImageView
        android:id="@+id/settingsLogo"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/sisu_logo_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/notificationSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleX="1.3"
        android:scaleY="1.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsLogo" />

    <RelativeLayout
        style="@style/DividerStyle"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/reminderSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/reminderSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleX="1.3"
        android:scaleY="1.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationSwitch" />

    <RelativeLayout
        style="@style/DividerStyle"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/lightsSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/lightsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleX="1.3"
        android:scaleY="1.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeButton" />

    <RelativeLayout
        style="@style/DividerStyle"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/idSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/idSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleX="1.3"
        android:scaleY="1.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lightsSwitch" />

    <RelativeLayout
        style="@style/DividerStyle"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/timeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/timeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="8dp"
        android:src="@drawable/appointment_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reminderSwitch" />

    <TextView
        android:id="@+id/notificationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/pushNotification"
        android:textSize="@dimen/font_normal"
        app:layout_constraintBottom_toBottomOf="@id/notificationSwitch"
        app:layout_constraintStart_toEndOf="@id/notificationSwitch"
        app:layout_constraintTop_toTopOf="@id/notificationSwitch" />

    <TextView
        android:id="@+id/reminderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/dailyReminder"
        android:textSize="@dimen/font_normal"
        app:layout_constraintBottom_toBottomOf="@id/reminderSwitch"
        app:layout_constraintStart_toEndOf="@id/reminderSwitch"
        app:layout_constraintTop_toTopOf="@id/reminderSwitch" />

    <TextView
        android:id="@+id/lightsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/lights"
        android:textSize="@dimen/font_normal"
        app:layout_constraintBottom_toBottomOf="@id/lightsSwitch"
        app:layout_constraintStart_toEndOf="@id/lightsSwitch"
        app:layout_constraintTop_toTopOf="@id/lightsSwitch" />

    <TextView
        android:id="@+id/idLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/touchId"
        android:textSize="@dimen/font_normal"
        app:layout_constraintBottom_toBottomOf="@id/idSwitch"
        app:layout_constraintStart_toEndOf="@id/idSwitch"
        app:layout_constraintTop_toTopOf="@id/idSwitch" />

    <RelativeLayout
        style="@style/DividerStyle"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idLabel" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/reminderTime"
        android:textSize="@dimen/font_normal"
        app:layout_constraintStart_toEndOf="@+id/timeButton"
        app:layout_constraintTop_toTopOf="@+id/timeButton" />

    <TextView
        android:id="@+id/timeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="12:00 AM"
        android:textSize="@dimen/font_normal"
        app:layout_constraintStart_toEndOf="@+id/timeButton"
        app:layout_constraintTop_toBottomOf="@+id/timeLabel" />


</android.support.constraint.ConstraintLayout>
